--- a/sitereg/openshift/templates/old/nginx-runtime/nginx-runtime.json
+++ b/sitereg/openshift/templates/old/nginx-runtime/nginx-runtime.json
@@ -63,7 +63,7 @@
       "displayName": "Git Repo URL",
       "description": "The URL to your GIT repo, don't use the this default unless your just experimenting.",
       "required": true,
-      "value": "https://github.com/bcgov/moh-bcp.git"
+      "value": "https://github.com/bcgov/moh-iam.git"
     },
     {
       "name": "GIT_REFERENCE",
