--- a/captcha-service/package.json
+++ b/captcha-service/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "NODE_ENV=production gulp",
     "start": "ts-node $NODE_DEBUG_OPTION build/index server",
-    "dev": "nodemon --watch src --inspect=0.0.0.0:9229 --exec ts-node ./src/index.js server",
+    "dev": "nodemon --watch src --inspect=0.0.0.0:9229 --exec ts-node ./src/index.ts server",
     "install": "tsc -p .",
-    "test": "echo \"WARNING: No test specified\" && exit 0",
+    "test": "ts-node tests/test",
     "test:coverage": "echo \"WARNING: No test specified\" && exit 0",
     "test:lint": "echo \"WARNING: No LINTer specified\" && exit 0",
     "test:schema": "echo \"WARNING: No schema specified\" && exit 0"
@@ -24,7 +24,8 @@
     "ip-range-check": "0.0.2",
     "jsonwebtoken": "^8.0.0",
     "lame": "^1.2.4",
-    "node-jose": "^1.0.0",
+    "node-jose": "^2.0.0",
+    "numeral": "^2.0.6",
     "os": "^0.1.1",
     "streamifier": "^0.1.1",
     "svg-captcha": "^1.3.1",
@@ -52,9 +53,9 @@
   "author": "Mark Lisé <contact@digitalspace.ca> (http://www.digitalspace.ca/)",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/bcgov/MOH-IAM-Enrolment/captcha-service/issues"
+    "url": "https://github.com/bcgov/MSP-BCP-Enrolment/captcha-service/issues"
   },
-  "homepage": "https://github.com/bcgov/MOH-IAM-Enrolment/captcha-service#readme",
+  "homepage": "https://github.com/bcgov/MSP-BCP-Enrolment/captcha-service#readme",
   "engines": {
     "node": ">=10.0.0"
   },
