--- a/captcha-service/package.json
+++ b/captcha-service/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "@types/express": "^4.16.0",
-    "@types/node": "^10.12.0",
+    "@types/node": "12.0.0",
     "arraybuffer-to-buffer": "0.0.4",
     "body-parser": "^1.16.0",
     "buffer": "^5.0.5",
     "dotenv": "^6.0.0",
     "express": "^4.14.1",
     "ip-range-check": "0.0.2",
-    "jsonwebtoken": "^8.0.0",
+    "jsonwebtoken": "9.0.0",
     "lame": "^1.2.4",
     "node-jose": "^2.0.0",
     "numeral": "^2.0.6",
